--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -58,6 +58,7 @@ main > div> h2 { /*You haven't logged any workouts today.*/
 	width: 100vw;
 	height: 100vh;
 	background: rgba(0,0,0,0.4);
+	transition: opacity 0.8s ease;
 }
 
 #modalWindow { /*The modal window itself*/
@@ -67,6 +68,8 @@ main > div> h2 { /*You haven't logged any workouts today.*/
 	gap: 5vh;
 	width: 50vw;
 	height: 86vh;
+	max-height: 86vh;
+	overflow-y: auto;
 	background: #e2e3dd;
 	border-radius: 12px;
 	border: 3px solid black;
@@ -237,4 +240,14 @@ h2 + p {
 
 #saveSet:disabled {
   cursor: not-allowed;
+}
+
+#noExAdded {
+	display: none;
+	margin-top: 2vh;
+	color: red;
+}
+
+.new-set-highlight {
+  color: #f7cd16 !important;
 }
