--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -32,7 +32,7 @@ form {
 	display: block;
 	margin: 0 auto;
 	background: #e2e3dd;
-	padding: 3px;
+	padding: 0.8vh;
 	border-radius: 30px;
 }
 
